# FormatParser

./: FormatParser.cabal  README.md
Text/FormatParser/: Binary.hs  Definitions.hs  Primitives.hs  Text.hs
